--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=abcd
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
