--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=abcd
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
