--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=employee-service
+spring.config.import=optional:configserver:http://localhost:8888
 
-server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
-spring.datasource.username=root
-spring.datasource.password=abcd
+#server.port=8081
+#spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+#spring.datasource.username=root
+#spring.datasource.password=abcd
 
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
