--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 spring.application.name=api-gateway
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-server.port=9090
-
+server.port=9191
 management.endpoints.web.exposure.include=*
-spring.cloud.gateway.enabled=true
 
-spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
+spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
+logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapper=DEBUG
 
-## Routes for Employee-Service
-spring.cloud.gateway.routes[0].id=employee-service
-spring.cloud.gateway.routes[0].uri=lb://EMPLOYEE-SERVICE
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
-
-
+# Routes for Employee-Service
+spring.cloud.gateway.server.webflux.routes[0].id=employee-service
+spring.cloud.gateway.server.webflux.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/employees/**
 
 ## Routes for Department-Service
-spring.cloud.gateway.routes[1].id=department-service
-spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
+spring.cloud.gateway.server.webflux.routes[1].id=department-service
+spring.cloud.gateway.server.webflux.routes[1].uri=http://localhost:8080
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/departments/**
+
+
 
