--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,12 +1,41 @@
 spring.application.name=employee-service
 spring.config.import=optional:configserver:http://localhost:8888
 
-#server.port=8081
-#spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
-#spring.datasource.username=root
-#spring.datasource.password=abcd
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.username=root
+spring.datasource.password=abcd
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+#Actuator for Circuit Breaker
+management.health.circuitbreakers.enabled=true
+management.endpoint.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+#Circute Breaker Config
+resilience4j.circuitbreaker.instances.employee-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.employee-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.employee-service.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.employee-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.employee-service.waitDurationInOpenState=5000
+resilience4j.circuitbreaker.instances.employee-service.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.employee-service.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.employee-service.slidingWindowType=COUNT_BASED
+
+#Retry Config
+resilience4j.retry.instances.employee-service.registerHealthIndicator=true
+resilience4j.retry.instances.employee-service.maxAttempts=5
+resilience4j.retry.instances.employee-service.waitDuration=2s
+
+
+
+
+
+
+
+
+
