--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -2,12 +2,11 @@ spring.application.name=department-service
 spring.config.import=optional:configserver:http://localhost:8888
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-#spring.datasource.username=root
-#spring.datasource.password=abcd
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db
+spring.datasource.username=root
+spring.datasource.password=abcd
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-
-#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
